actualizo css - container password

--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,41 @@
-.my-container{ 
-    font-size: large;
-    padding: 0px;
+body{
+    background-color: lightgrey;
+}
+.my-header{ 
+    text-align: center;
+    padding: 2em;
   }
+
+h1{
+    font-size: 4em;
+}
+
+.password {
+    
+    /**border: 1px solid #fff;
+    line-height: 1.5em;
+    background: #fff;
+
+    height: 1.5em;
+    display: block;
+    background: rgba(255, 255, 255, .6);*/
+    border: none;
+    width: 100%;
+    font-size: 1.5em;
+    text-align: center;
+}
+.password:focus {
+    outline: none
+}
+.pwd-row {
+    background-color: white;
+}
+.pwd-icon {
+    font-size: 2em;
+    margin: auto;
+    float: right;
+}
+
+.asd{
+    border: solid 2px;
+}
