--- a/css/app.css
+++ b/css/app.css
@@ -1,12 +1,9 @@
-body{
-    background-color: lightgrey;
-}
+
 .my-header{ 
     text-align: center;
     padding: 2em;
-  }
-
-
+    background-color: #e9ecef;
+}
 
 .password {
     border: none;
@@ -20,6 +17,8 @@ body{
 
 .pwd-row {
     background-color: white;
+    border: solid 1.5px;
+    border-color: #e9ecef;
 }
 
 .pwd-icon {
@@ -28,18 +27,34 @@ body{
     float: right;
 }
 
-@media only screen and (min-width: 640px) {
+.title {
+    font-size: 1em;
+}
+@media only screen and (min-width: 420px) {
+    .title {
+        font-size: 1.5em;
+    }
+}
+@media only screen and (min-width: 530px) {
     .title {
         font-size: 2em;
     }
 }
-
+@media only screen and (min-width: 650px) {
+    .title {
+        font-size: 2.5em;
+    }
+}
 @media only screen and (min-width: 768px) {
     .title {
         font-size: 3em;
     }
 }
-
+@media only screen and (min-width: 900px) {
+    .title {
+        font-size: 3.5em;
+    }
+}
 @media only screen and (min-width: 1080px) {
     .title {
         font-size: 4em;
