--- a/css/app.css
+++ b/css/app.css
@@ -1,22 +1,28 @@
 :root {
     --gris: #e9ecef;
+    --azul-marino: #4C739B;
 }
 .my-header{ 
     text-align: center;
     padding: 2em;
-    background-color: var(--gris);
+    background-color: var(--azul-marino);
 }
 
+.bg-azul{
+    background-color: var(--azul-marino);
+}
 .footer{
     border-top: 1px solid;
     border-color: var(--gris);
     padding: 1em;
+    margin-top: 1em;
 }
 
 .password {
     border: none;
     width: 100%;
-    font-size: 1.5em;
+    font-size: 1.2em;
+    height: 2em;
     text-align: center;
 }
 .password:focus {
