--- a/css/app.css
+++ b/css/app.css
@@ -77,6 +77,7 @@
     color: rgb(202, 29, 29);
 }
 
+
 .title {
     font-size: 1.5em;
 }
@@ -113,4 +114,8 @@
 
 .disabled {
     opacity: 0.65;
+}
+
+.oculto {
+    display: none;
 }
