--- a/css/app.css
+++ b/css/app.css
@@ -9,6 +9,16 @@
     background-color: var(--azul-marino);
 }
 
+.img-fluid{
+    max-width: 100%;
+    max-height: 100%;
+}
+@media only screen and (max-width: 920px) {
+    .img-fluid {
+        display: none;
+    }
+}
+
 .btn-principal{
     color: white;
     background-color: var(--azul-marino);
@@ -81,32 +91,32 @@
 .title {
     font-size: 1.5em;
 }
-@media only screen and (min-width: 420px) {
+@media only screen and (min-width: 500px) {
     .title {
         font-size: 1.5em;
     }
 }
-@media only screen and (min-width: 540px) {
+@media only screen and (min-width: 640px) {
     .title {
         font-size: 2em;
     }
 }
-@media only screen and (min-width: 660px) {
+@media only screen and (min-width: 780px) {
     .title {
         font-size: 2.5em;
     }
 }
-@media only screen and (min-width: 780px) {
+@media only screen and (min-width: 920px) {
     .title {
         font-size: 3em;
     }
 }
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1060px) {
     .title {
         font-size: 3.5em;
     }
 }
-@media only screen and (min-width: 1080px) {
+@media only screen and (min-width: 1200px) {
     .title {
         font-size: 4em;
     }
