--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,7 @@
     }
 }
 
+
 .btn-principal{
     color: white;
     background-color: var(--azul-marino);
@@ -65,6 +66,7 @@
     font-size: 1.7em;
     margin: auto;
     float: right;
+    cursor: pointer;
 }
 
 .tabla-borde-gris {
