--- a/css/app.css
+++ b/css/app.css
@@ -93,6 +93,10 @@ body{
     transition: 0.3s ease all;
 }
 
+.td-align-right {
+    text-align: right;
+}
+
 .icono-gris{
     color: var(--gris);
 }
@@ -118,9 +122,6 @@ body{
 }
 
 .footer{
-    border-top: 1px solid;
-    border-color: var(--gris);
-    padding: 1em;
     margin-top: 1em;
 }
 
