--- a/css/app.css
+++ b/css/app.css
@@ -8,11 +8,11 @@
     transition: 0.3s ease all;
 }
 
-body{
+body {
     transition: 0.3s ease all;
 }
 
-.my-header{ 
+.my-header {
     text-align: center;
     color: #ffffff;
     padding: 2em;
@@ -22,41 +22,48 @@ body{
 .title {
     font-size: 1.5em;
 }
+
 @media only screen and (min-width: 500px) {
     .title {
         font-size: 1.5em;
     }
 }
+
 @media only screen and (min-width: 640px) {
     .title {
         font-size: 2em;
     }
 }
+
 @media only screen and (min-width: 780px) {
     .title {
         font-size: 2.5em;
     }
 }
+
 @media only screen and (min-width: 920px) {
     .title {
         font-size: 3em;
     }
 }
+
 @media only screen and (min-width: 1060px) {
     .title {
         font-size: 3.5em;
     }
 }
+
 @media only screen and (min-width: 1200px) {
     .title {
         font-size: 4em;
     }
 }
 
-.img-fluid{
+.img-fluid {
     max-width: 100%;
     max-height: 100%;
 }
+
 @media only screen and (max-width: 920px) {
     .img-fluid {
         display: none;
@@ -70,6 +77,7 @@ body{
     height: 2em;
     text-align: center;
 }
+
 .password:focus {
     outline: none
 }
@@ -87,7 +95,7 @@ body{
     cursor: pointer;
 }
 
-.table{
+.table {
     border: 1px solid var(--gris);
 }
 
@@ -95,19 +103,19 @@ body{
     text-align: right;
 }
 
-.icono-gris{
+.icono-gris {
     color: var(--gris);
 }
 
-.icono-amarillo{
+.icono-amarillo {
     color: rgb(238, 221, 65);
 }
 
-.icono-verde{
+.icono-verde {
     color: rgb(33, 209, 33);
 }
 
-.icono-rojo{
+.icono-rojo {
     color: rgb(202, 29, 29);
 }
 
@@ -123,6 +131,10 @@ body{
     margin-top: 1em;
 }
 
+.footer-icon {
+    max-width: 1.2em;
+    max-height: 1.2em;
+}
 .card-header {
     background-color: var(--primary-color);
     color: white;
@@ -132,13 +144,16 @@ body{
     background-color: var(--gris-oscuro) !important;
     color: #eee;
 }
-  
-[data-theme="dark"] .table, [data-theme="dark"] .card, 
-[data-theme="dark"] hr, [data-theme="dark"] .list-group-item {
+
+[data-theme="dark"] .table,
+[data-theme="dark"] .card,
+[data-theme="dark"] hr,
+[data-theme="dark"] .list-group-item {
     border-color: var(--borde-tabla-oscuro);
 }
-  
-[data-theme="dark"] thead, [data-theme="dark"] .card-header {
+
+[data-theme="dark"] thead,
+[data-theme="dark"] .card-header {
     background-color: var(--thead-dark);
 }
 
@@ -146,6 +161,7 @@ body{
     color: var(--gris-900);
 }
 
-[data-theme="dark"] .list-group-item, [data-theme="dark"] .card-body {
+[data-theme="dark"] .list-group-item,
+[data-theme="dark"] .card-body {
     background-color: var(--gris-oscuro);
 }
